--- a/test.ipynb
+++ b/test.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOrOFKWfpK+sjTIS2s9VyFv",
+      "authorship_tag": "ABX9TyNbIFVg3VuepVkOprrEVq47",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JulienMaleplate/JulienMaleplate/blob/main/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JulienMaleplate/test/blob/main/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,12 +34,12 @@
       "metadata": {
         "id": "tm607G2THp4S"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -113,7 +112,7 @@
       "metadata": {
         "id": "rLxMSgmedQFp"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +133,7 @@
       "metadata": {
         "id": "wpeDTT6MdiUY"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +149,7 @@
         "id": "f2Zl_ljtdvgx",
         "outputId": "63f4f4e8-79eb-4ecc-8b75-7a9c681aeebd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +178,7 @@
         "id": "lyYE_AqMeENa",
         "outputId": "5e1ffb3c-1173-41da-9daa-cb5187d7dedb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,6 +189,145 @@
           },
           "metadata": {},
           "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Création des variables\n",
+        "nombre_a_gauche = 11\n",
+        "nombre_a_droite = 5\n",
+        "operation = \"/\"\n",
+        "resultat = 0\n",
+        "# Vérifie si les deux nombres sont valides avec la fonction isinstance (soit un integer, soit un float)\n",
+        "if not isinstance(nombre_a_gauche, (int, float)) or not isinstance(nombre_a_droite, (int, float)):\n",
+        "\n",
+        "    print(\"Erreur: les deux nombres doivent être des nombres entiers ou flottants.\")\n",
+        "else:\n",
+        "\n",
+        "    # Vérifie si le symbole est valide\n",
+        "    if operation not in [\"+\", \"-\", \"*\", \"/\"]:\n",
+        "\n",
+        "        print(\"Erreur: le symbole d'opération doit être '+', '-', '*' ou '/'.\")\n",
+        "    else:\n",
+        "\n",
+        "        # Effectue l'opération en fonction du symbole\n",
+        "        if operation == \"+\":\n",
+        "            resultat = nombre_a_gauche + nombre_a_droite\n",
+        "\n",
+        "        elif operation == \"-\":\n",
+        "            resultat = nombre_a_gauche - nombre_a_droite\n",
+        "\n",
+        "        elif operation == \"*\":\n",
+        "            resultat = nombre_a_gauche * nombre_a_droite\n",
+        "\n",
+        "        elif operation == \"/\":\n",
+        "            # Vérifie si la variable `nombre_a_droite` n'est pas nulle pour la division\n",
+        "            if nombre_a_droite == 0:\n",
+        "                print(\"Erreur: impossible de diviser par zéro.\")\n",
+        "            else:\n",
+        "                resultat = nombre_a_gauche / nombre_a_droite\n",
+        "\n",
+        "        # Affiche le résultat\n",
+        "        print(f\"Le résultat de l'opération est: {resultat}\")"
+      ],
+      "metadata": {
+        "id": "9VHRIbb9PONH",
+        "outputId": "7500011e-d269-41db-a23c-f5444f2b9a07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Le résultat de l'opération est: 2.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Ce programme va tester si deux mots sont des anagrammes\")\n",
+        "\n",
+        "a=str(input(\"Entrer un premier mot: \"))\n",
+        "b=str(input(\"Entrer un deuxième mot: \"))\n",
+        "a=a.lower()\n",
+        "b=b.lower()\n",
+        "\n",
+        "if len(a)==len(b):\n",
+        "    A=sorted(a)\n",
+        "    B=sorted(b)\n",
+        "    if A==B:\n",
+        "        print(f\"Les mots '{a}' et '{b}' sont des anagrammes!\")\n",
+        "    else:\n",
+        "        print(f\"Les mots '{a}' et '{b}' ne sont pas des anagrammes...\")\n",
+        "else:\n",
+        "    print(f\"Les mots '{a}' et '{b}' ne sont pas des anagrammes...\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d6bhc_3kUmpM",
+        "outputId": "a376317d-6090-476f-dc83-bd1311eef7eb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ce programme va tester si deux mots sont des anagrammes\n",
+            "Entrer un premier mot: Nichee\n",
+            "Entrer un deuxième mot: Chienne\n",
+            "Les mots 'nichee' et 'chienne' ne sont pas des anagrammes...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Ce programme va tester si un mot est un palindrome.\")\n",
+        "\n",
+        "a=str(input(\"Entrer un mot: \"))\n",
+        "a=a.lower()\n",
+        "\n",
+        "k=0\n",
+        "for i in range (len(a)):\n",
+        "    if a[i]==a[-i-1]:\n",
+        "        k+=1\n",
+        "    else:\n",
+        "        k=k\n",
+        "\n",
+        "if k==len(a):\n",
+        "    print(f\"Le mot {a} est un palindrome.\")\n",
+        "else:\n",
+        "    print(f\"Le mot {a} n'est pas un palindrome.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m3t8-b_WVRse",
+        "outputId": "018bac9c-a185-4230-dbf8-ee51e0aebcb1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ce programme va tester si un mot est un palindrome.\n",
+            "Entrer un mot: Jkijkj\n",
+            "Le mot jkijkj n'est pas un palindrome.\n"
+          ]
         }
       ]
     }
